fixed spacing for overlay on portfolio page

--- a/assets/style.css
+++ b/assets/style.css
@@ -83,16 +83,14 @@ a {
   width: 100%;
   height: 100%;
   position: absolute;
-  /* top: 50%;
-    left: 50%; */
-  /* -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%); */
   text-align: center;
-  padding: 1em;
+  padding-left: 1em;
+  padding-right: 1em;
+  padding-top: 20%;
 }
 @media only screen and (max-width: 550px) {
   .text {
     font-size: 0.75em;
+    padding-top: 10%;
   }
 }
